# SlicerConda

./: CMakeLists.txt  LICENSE.txt  README.md
CondaSetUp/: CMakeLists.txt  CondaSetUp.py  get_users.awk  test.py
CondaSetUp/Resources/UI/: CondaSetUp.ui
Example/: CMakeLists.txt  Example.py
Example/Resources/UI/: Example.ui
Example/utils/: threshold.py
